Stretch Goal: make fixed nav and added opacity to bg

--- a/less/global.less
+++ b/less/global.less
@@ -38,6 +38,6 @@ img {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 9rem auto 0; 
 }
 
