--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,12 @@
 .topbar {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	background-color: #f4f4f4;
+  background-color: rgba(244, 244, 244, .6);
 	width: 100%;
 	height: 9rem;
   padding: 0 @spacing-sm;
